[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "juq_py"
dynamic = ["version"]
description = "Query, run, and clean/normalize Jupyter notebooks"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Ryan Williams", email = "ryan@runsascoded.com" },
]
dependencies = [
    "click",
    "nbformat",
    "utz>=0.16.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/runsascoded/juq"
Author = "https://github.com/ryan-williams"

[project.scripts]
juq = "juq.main:main"

[project.optional-dependencies]
test = [
    "ipykernel",
    "papermill",
    "pytest",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/juq"]
